add powerapps demo

--- a/08-FEED.Rmd
+++ b/08-FEED.Rmd
@@ -62,7 +62,9 @@ knitr::include_graphics("images/FEED/VIMS.PNG", error = FALSE)
 knitr::include_graphics("images/FEED/FeedFeatures.JPG", error = FALSE)
 ```
 
-### FEED App/VIMS Data Output Format
+### VIMS/FEED App Data Output Format
+
+VIMS/FEED is configured to work with and Access database. Survey data collections are stored in Access db as an intermediate location, but data tables will need to be formatted further to establish the final database format (using a processing script: R, Python, SAS, other).  
 
 
 ## FEED: Criteria Tables
