--- a/powerappsdemo.rmd
+++ b/powerappsdemo.rmd
@@ -1,60 +1,74 @@
 # SF Bay Study: PowerApps Trial App   {#powdem}
 
 
+The SF Bay Study ES staff have explored several electronic data entry software to support the complex Bay Study survey collections.  The software app that has shown the most promise is the Microsoft Form software 'Power Apps'.  T
+
+After approximately 6 months of app development in collaboration with the CDFW IT department and with Tuongvan Nguyen (IEP), the SF Bay Study Power app is now in a lab/field testing phase of development. Included below are screen shots of the app demonstrating the key features.
+
+SF Bay Study Power app (BSPapp) main menu options include new sample and edit sample options; data export by csv or direct transfer to the SQL database; options to edit records that are stored on the device, call "collections" or records that have been transferred to the SQL database located on a remote system.
 
 ```{r padem1, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: Main Screen options.", out.width = '90%'}
 knitr::include_graphics("images/IEPdemos/SFBS_powerapps/SFPapp_main.jpg", error = FALSE)
 ```
 
-```{r padem1, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: Main Screen options.", out.width = '90%'}
+The 'New Sample' menu of the BSPapp includes dropdown manus and default field entries to support quick data entry.
+
+
+```{r padem2, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: Day Level and Sample Info menus.", out.width = '90%'}
 knitr::include_graphics("images/IEPdemos/SFBS_powerapps/SFPapp_DaySample.jpg", error = FALSE)
 ```
 
-```{r padem1, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: Main Screen options.", out.width = '90%'}
+The 'View/Add Tow' menu of the BSPapp: GPS coordinates currently extracted from the device. Photos can be attached to a tow record.  
+
+
+
+```{r padem3, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: Tow Info fields.", out.width = '90%'}
 knitr::include_graphics("images/IEPdemos/SFBS_powerapps/TowInfo.jpg", error = FALSE)
 ```
 
+The 'View/Add Fish' menu of the BSPapp: Provides options to add single length or multiple lengths for faster entry.
 
-```{r padem1, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: Main Screen options.", out.width = '90%'}
+
+```{r padem4, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: View/Add Fish screen; showing dropdown menu for adding a new fish species.", out.width = '90%'}
 knitr::include_graphics("images/IEPdemos/SFBS_powerapps/SFPapp_selectspp.jpg", error = FALSE)
 ```
 
+BSPapp options to add photos associated with each species: direct photos captured from device camera or uploaded from file on the device.
 
 
-
-
-
-```{r padem1, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: Main Screen options.", out.width = '90%'}
-knitr::include_graphics("images/IEPdemos/SFBS_powerapps/add_lengths.jpg", error = FALSE)
-```
-
-
-
-
-
-```{r padem1, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: Main Screen options.", out.width = '90%'}
+```{r padem6, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: Options to add photos to each spcies record; can collect photes from device file folder or directly from camera.", out.width = '90%'}
 knitr::include_graphics("images/IEPdemos/SFBS_powerapps/collect_photos.jpg", error = FALSE)
 ```
 
 
+The 'Add Lengths' menu of the BSPapp:Provides realtime frequency plotting.
 
-```{r padem1, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: Main Screen options.", out.width = '90%'}
+
+```{r padem5, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: Add Lengths screen with realtime frequency plotting.", out.width = '90%'}
+knitr::include_graphics("images/IEPdemos/SFBS_powerapps/add_lengths.jpg", error = FALSE)
+```
+
+
+SF Bay Study Power add (BSPapp) provided options to edit records that are in the 'collections' on the device; alternatively can edit records that have already been transferred to the SQL database.
+
+```{r padem7, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: Edit Sample options; ", out.width = '90%'}
 knitr::include_graphics("images/IEPdemos/SFBS_powerapps/edit_sample.jpg", error = FALSE)
 ```
 
+BSPapp designed to provide summary for each species with both listed lengths and frequency plots.
 
 
-
-```{r padem1, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: Main Screen options.", out.width = '90%'}
+```{r padem8, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: Main Screen options.", out.width = '90%'}
 knitr::include_graphics("images/IEPdemos/SFBS_powerapps/summary_byspecies.jpg", error = FALSE)
 ```
 
+BSPapp designed to provide .csv export to OneDrive for all relational tables.  BSPapp also provides option to export data collection to a json file as a back up for extended off-line periods.
 
 
-
-```{r padem1, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: Main Screen options.", out.width = '90%'}
+```{r padem9, echo=FALSE, fig.cap="Screen capture of SF Bay Study Power Apps demo app: Main Screen options.", out.width = '90%'}
 knitr::include_graphics("images/IEPdemos/SFBS_powerapps/export_csv_json.jpg", error = FALSE)
 ```
+
 
 
 
